# Game_LeadTheHordes_base

./: .gitignore  CMakeLists.txt  Changelog.txt  LICENSE  Makefile  README.md  clean.bat  cmake_rebuild_run.bat  make_clean.bat  make_gmake2.bat  make_vs2022.bat  premake5.lua
Eris_Log/: CMakeLists.txt  premake5.lua
Eris_Log/include/Eris_Log/: Log.h  TimeFormatter.h
Eris_Log/src/: Log.cpp  Log.tpp  TimeFormatter.cpp
Eris_Utility/: premake5.lua
Eris_Utility/include/Eris_Utility/: Log.h  _Time.h
Eris_Utility/lib/windows_Debug-x86_64_vs2022/: Eris_Utility.idb  Eris_Utility.lib
Eris_Utility/src/: Log.cpp  Log.tpp  _Time.cpp
LeadTheHordes/: Makefile
LeadTheHordes/configs/: keys.ini  window_settings.ini
LeadTheHordes/src/: GameEngine.cpp  GameEngine.h  Hordes_pch.cpp  Hordes_pch.h  main.cpp
LeadTheHordes/src/core/: dt.cpp  dt.h
LeadTheHordes/src/misc/: Utils.cpp  Utils.h
